# cavey

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/workflows/: cd.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/: AiSetupComponent.cpp  AiSetupComponent.h  CaveyLookAndFeel.cpp  CaveyLookAndFeel.h  LoadingComponent.cpp  LoadingComponent.h  Parameter.cpp  Parameter.h
src/controllers/: AnthropicController.cpp  AnthropicController.h  CredentialStore.cpp  CredentialStore.h  EnvironmentVariableProvider.h  HttpTransport.cpp  HttpTransport.h  LLMController.cpp  LLMController.h  OllamaController.cpp  OllamaController.h  OpenAIController.cpp  OpenAIController.h  ProviderResponseParser.cpp  ProviderResponseParser.h  SystemPrompt.md
src/effects/: CaveyEffects.cpp  CaveyEffects.h
src/types/: BackendParameter.cpp  BackendParameter.h  CaveyTypes.h
test/: JuceHeader.h  PluginProcessorTests.cpp
test/controllers/: ProviderControllerTests.cpp
test/effects/: CaveyEffectsTests.cpp
test/types/: BackendParameterTests.cpp
